--- a/src/commponent/core.css
+++ b/src/commponent/core.css
@@ -1,8 +1,10 @@
-
 .count {
     display: flex;
     width: 400px;
     height: 100px;
+    background-color: aqua;
+    border:  2px solid #585757;
+    border-radius: 20px;
     
 }
 h3 {
